[kienvt/update]: format code